Updated to SE using term public usage guidance instead of privileged

--- a/builders/templates/mock-privileged-banner.html
+++ b/builders/templates/mock-privileged-banner.html
@@ -46,7 +46,7 @@
             </div>
             <div class="flex--item lh-md">
                 <p class="mb0">
-                    {{ reasons['Privileged user guidance'] }}
+                    {{ reasons['Public user guidance'] }}
                 </p>
                 <p class="mb0 mt6">Closed <span title="2022-05-12 17:33:51Z"
                                                 class="relativetime">[Time] ago</span>
